# talos-principle-tetromino-puzzle-solver

./: .editorconfig  .gitattributes  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp  performance.cpp
src/grid/: coords.hpp  grid.natvis  gridcell.hpp
src/lib/: CMakeLists.txt
src/lib/grid/: grid.hpp
src/lib/solver/: board.hpp  placement.hpp  placement_mask.cpp  placement_mask.hpp  rotation.cpp  rotation.hpp  solver.cpp  solver.hpp  solver_status.cpp  solver_status.hpp  square.hpp  tetrominoes.hpp
src/lib/utility/: duration.cpp  duration.hpp  factorial.cpp  statistics.hpp  str.cpp  str.hpp
src/performance/: CMakeLists.txt  cli.cpp  cli.hpp  csv.hpp  main.cpp  summary.cpp  summary.hpp
src/solver/: board.cpp  board.hpp  placement.cpp  placement_mask.cpp  placement_mask.hpp  rotation.hpp  solver.cpp  solver.hpp  square.cpp  square.hpp  stats.cpp  stats.hpp  tetrominoes.cpp  tetrominoes.hpp
src/tptps/: CMakeLists.txt  main.cpp
src/utility/: factorial.hpp
tests/: CMakeLists.txt  grid_coords.cpp  grid_grid.cpp  grid_gridcell.cpp  solver.cpp  solver_board.cpp  solver_placement.cpp  solver_placement_mask.cpp  solver_rotation.cpp  solver_solver.cpp  solver_square.cpp  solver_tetrominoes.cpp  utility_duration.cpp  utility_factorial.cpp  utility_statistics.cpp
tests/helpers/: tempfile.cpp  tempfile.hpp
tests/lib/grid/: coords.cpp  grid.cpp  gridcell.cpp
tests/lib/solver/: board.cpp  placement.cpp  placement_mask.cpp  rotation.cpp  solver.cpp  solver_status.cpp  square.cpp
tests/lib/utility/: duration.cpp  factorial.cpp  statistics.cpp  str.cpp
tests/performance/: cli.cpp  csv.cpp
